--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:PL"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <local:EngineerExperienceLevel x:Key="EngineerExperienceLevelKey"/>
     </Application.Resources>
 </Application>
