--- a/PL/App.xaml
+++ b/PL/App.xaml
@@ -5,5 +5,7 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <local:EngineerExperienceLevel x:Key="EngineerExperienceLevelKey"/>
+        <local:ConvertIdToContent x:Key="ConverIdToContentKey"/>
+        <local:ConvertIdToBoolean x:Key="ConvertIdToBooleanKey"/>
     </Application.Resources>
 </Application>
