--- a/PL/Engineer/EngineerListWindow.xaml
+++ b/PL/Engineer/EngineerListWindow.xaml
@@ -11,41 +11,33 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40*"/>
-            <RowDefinition Height="500*"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="400*"/>
+            <RowDefinition Height="60*"/>
         </Grid.RowDefinitions>
         <!--Internal, Upper Grid-->
-        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="0" VerticalAlignment="Stretch" Width="auto">
+        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="0"
+              VerticalAlignment="Stretch" Width="auto">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <!--Engineer List Filter Label-->
-            <Label Content="Filter by engineer level:" Grid.Column="0" HorizontalAlignment="Left" Margin="152,8,0,0" VerticalAlignment="Top">
-                <Label.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0" SpreadMethod="Reflect">
-                        <LinearGradientBrush.RelativeTransform>
-                            <TransformGroup>
-                                <ScaleTransform CenterY="0.5" CenterX="0.5"/>
-                                <SkewTransform CenterX="0.5" CenterY="0.5"/>
-                                <RotateTransform CenterX="0.5" CenterY="0.5" Angle="40"/>
-                                <TranslateTransform X="0"/>
-                            </TransformGroup>
-                        </LinearGradientBrush.RelativeTransform>
-                        <GradientStop Color="#FFF7DCDC" Offset="1"/>
-                        <GradientStop Color="#FFF38080" Offset="0"/>
-                        <GradientStop Color="#FFCE8989" Offset="0.587"/>
-                    </LinearGradientBrush>
-                </Label.Background>
-            </Label>
+            <Label Content="Filter by engineer level:" HorizontalAlignment="Center"
+                   Margin="170,10,0,0" VerticalAlignment="Top" Background="#FFF8EEEE" Width="134"/>
             <!--Engineer List Filter ComboBox-->
             <ComboBox ItemsSource="{Binding Source={StaticResource EngineerExperienceLevelKey}}"
                       SelectedValue="{Binding Path=level, Mode=TwoWay}"
                       SelectionChanged="Engineer_Filter_Changed"
                       Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         </Grid>
-        <ListView Grid.Row="1" ItemsSource="{Binding Path=EngineerList}" Margin="-1,0,1,0"
+        <ListView Grid.Row="1" ItemsSource="{Binding EngineerList}" Margin="-1,0,1,0"
                   MouseDoubleClick="EngineerList_DoubleClick">
+            <ListView.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFF8EEEE"/>
+                    <GradientStop Color="#FFEC6060" Offset="1"/>
+                </LinearGradientBrush>
+            </ListView.Background>
             <ListView.View>
                 <GridView>
                     <GridViewColumn/>
@@ -54,8 +46,6 @@
 
         </ListView>
         <Button Content="Add" Grid.Row="2" HorizontalAlignment="Center" Height="50" Width="100"
-                Click="Add_Engineer_Click"/>
-
-
+                Click="Add_Engineer_Click" Background="#FFEC6060"/>
     </Grid>
 </Window>
