--- a/PL/MainWindow.xaml
+++ b/PL/MainWindow.xaml
@@ -7,6 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FFF9FAFA"/>
+                <GradientStop Color="#FF9CFADE" Offset="1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
         <!--Show engineers Button-->
         <Button Content="Show engineers" HorizontalAlignment="Left" Margin="80,60,0,0" VerticalAlignment="Top" Height="54" Width="117" Click="Button_Engineer_Click"/>
         <Button Content="Initialize data" HorizontalAlignment="Left" Margin="308,57,0,0" VerticalAlignment="Top" Height="60" Width="120" Click="Button_Initialize_Click"/>
