--- a/PL/Task/TaskListWindow.xaml
+++ b/PL/Task/TaskListWindow.xaml
@@ -6,7 +6,45 @@
         xmlns:local="clr-namespace:PL.Task"
         mc:Ignorable="d"
         Title="TaskListWindow" Height="450" Width="800">
+    <!--External Grid-->
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40*"/>
+            <RowDefinition Height="400*"/>
+            <RowDefinition Height="60*"/>
+        </Grid.RowDefinitions>
+        <!--Internal, Upper Grid-->
+        <Grid HorizontalAlignment="Stretch" Height="auto" Grid.Row="0"
+          VerticalAlignment="Stretch" Width="auto">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <!--Engineer List Filter Label-->
+            <Label Content="Filter by complexity level:" HorizontalAlignment="Center"
+               Margin="170,10,0,0" VerticalAlignment="Top" Background="#FFF8EEEE" Width="134"/>
+            <!--Engineer List Filter ComboBox-->
+            <ComboBox ItemsSource="{Binding Source={StaticResource EngineerExperienceLevelKey}}"
+                  SelectedValue="{Binding Path=MyLevel, Mode=TwoWay}"
+                  SelectionChanged="Task_Filter_Changed"
+                  Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        </Grid>
+        <ListView Grid.Row="1" ItemsSource="{Binding TaskList}" Margin="-5,0,5,0"
+              MouseDoubleClick="TaskList_TaskSelected"  BorderBrush="Black">
+            <ListView.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FFF8EEEE"/>
+                    <GradientStop Color="#FFEC6060" Offset="1"/>
+                </LinearGradientBrush>
+            </ListView.Background>
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn/>
+                </GridView>
+            </ListView.View>
+
+        </ListView>
+        <Button Content="Add" Grid.Row="2" HorizontalAlignment="Center" Height="50" Width="100"
+            Click="Add_Task_Click"  Background="#FFEC6060"/>
     </Grid>
 </Window>
