--- a/PL/EngineerMainWindow.xaml
+++ b/PL/EngineerMainWindow.xaml
@@ -7,6 +7,39 @@
         mc:Ignorable="d"
         Title="EngineerMainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="3*"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <!--Internal, Upper Grid-->
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
+            </Grid.ColumnDefinitions>
+        </Grid>
+        <TextBox MaxLength="9" HorizontalAlignment="Left" Margin="280,26,0,0" VerticalAlignment="Top" Width="120"
+        IsEnabled="{Binding Id, Converter={StaticResource ConvertIdToBooleanKey}}"
+         Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
+        <Label Grid.Column="0" Content="Enter your Id:" HorizontalAlignment="Left" Margin="167,25,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.033,0.721"/>
+
+        <!--Internal, Middle Grid-->
+        <Grid Grid.Row = "1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+        </Grid>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="207,130,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+
+
+        <!--Internal, Lower Grid-->
+        <Grid Grid.Row = "2">
+            <Button Content="Task List"  HorizontalAlignment="Left" Margin="49,5,0,5" Grid.RowSpan="1" Width="200"/>
+            <Button Content="Task Details"  HorizontalAlignment="Left" Margin="400,5,0,5" Grid.RowSpan="1" Width="200"/>
+
+        </Grid>
+
     </Grid>
 </Window>
