--- a/PL/Task/TaskWindow.xaml
+++ b/PL/Task/TaskWindow.xaml
@@ -5,8 +5,137 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL.Task"
         mc:Ignorable="d"
-        Title="TaskWindow" Height="450" Width="800">
+        Title="TaskWindow" 
+        DataContext="{Binding MyTask, RelativeSource={RelativeSource Mode=Self}, Mode=TwoWay}">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="5*"/>
+            
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
         
+        <!-- task id -->
+        <Label Grid.Row="0" Grid.Column="1" Content="Id:" 
+               HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Grid.Row="0" Grid.Column="3" 
+                 HorizontalAlignment="Left" VerticalAlignment="Center"
+                 Text="{Binding Path=Id}" IsEnabled="False" Width="200"/>
+        
+        <!-- task alias -->
+        <Label Grid.Row="1" Grid.Column="1" Content="Alias:" 
+       HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Grid.Row="1" Grid.Column="3" 
+         HorizontalAlignment="Left" VerticalAlignment="Center"
+         Text="{Binding Path=Alias, Mode=TwoWay}" Width="200"/>
+        
+        <!-- task description -->
+        <Label Grid.Row="2" Grid.Column="1" Content="Description:" 
+       HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Grid.Row="2" Grid.Column="3" 
+         HorizontalAlignment="Left" VerticalAlignment="Center"
+         Text="{Binding Path=Description, Mode=TwoWay}" Width="300"/>
+        
+        <!-- task status -->
+        <Label Grid.Row="3" Grid.Column="1" Content="Status:" 
+       HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Grid.Row="3" Grid.Column="3" 
+         HorizontalAlignment="Left" VerticalAlignment="Center"
+         Text="{Binding Path=Status}" IsEnabled="False" Width="200"/>
+        
+        <!-- task dependencies -->
+        <Label Grid.Row="4" Grid.Column="1" Content="Dependencies:" 
+       HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <ListView Grid.Row="4" Grid.Column="3"
+                  HorizontalAlignment="Left" Width="300"
+                  ItemsSource="{Binding Path=Dependencies}"/>
+        
+        <!-- task creation date -->
+        <Label Grid.Row="5" Grid.Column="1" Content="Creation Date:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Grid.Row="5" Grid.Column="3" 
+        HorizontalAlignment="Left" VerticalAlignment="Center"
+        Text="{Binding Path=CreatedAtDate}" IsEnabled="False" Width="200"/>
+        
+        <!-- task scheduled date -->
+        <Label Grid.Row="6" Grid.Column="1" Content="Scheduled Starting Date:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding ScheduledDate, Mode=TwoWay}" 
+                 Grid.Row="6" Grid.Column="3" Width="200"
+                 HorizontalAlignment="Left" VerticalAlignment="Center"/>
+
+        <!-- task start date  -->
+        <Label Grid.Row="7" Grid.Column="1" Content="Starting Date:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding StartDate, Mode=TwoWay}" 
+         Grid.Row="7" Grid.Column="3" Width="200"
+         HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        
+        <!-- task forcast date -->
+        <Label Grid.Row="8" Grid.Column="1" Content="Forcast Completion Date:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding ForecastDate, Mode=TwoWay}" 
+         Grid.Row="8" Grid.Column="3" Width="200"
+         HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        
+        <!-- task end date -->
+        <Label Grid.Row="9" Grid.Column="1" Content="Completion Date:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding CompleteDate, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" 
+         Grid.Row="9" Grid.Column="3" Width="200"
+         HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        
+        <!-- task effort time -->
+        <Label Grid.Row="10" Grid.Column="1" Content="Required Effort Time:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <TextBox Text="{Binding RequiredEffortTime, Mode=TwoWay}" 
+         Grid.Row="10" Grid.Column="3" Width="200"
+         HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        
+        <!-- task complexity -->
+        <Label Grid.Row="11" Grid.Column="1" Content="Complexity:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <ComboBox Grid.Row="11" Grid.Column="3" HorizontalAlignment="Left" 
+          Width="200" VerticalAlignment="Center"
+          ItemsSource="{Binding Source={StaticResource EngineerExperienceLevelKey}}"
+          SelectedValue="{Binding Path=Copmlexity, Mode=TwoWay, NotifyOnValidationError=True, 
+            ValidatesOnExceptions=True}" BorderBrush="White"/>
+
+        <!-- task deliverables -->
+        <Label Grid.Row="12" Grid.Column="1" Content="Deliverables:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        
+        <!-- task remarks -->
+        <Label Grid.Row="13" Grid.Column="1" Content="Creation Date:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        
+        <!-- task engineer -->
+        <Label Grid.Row="14" Grid.Column="1" Content="Assigned Engineer:" 
+        HorizontalAlignment="Right" VerticalAlignment="Center"/>
+
+        <Button Content="{Binding Id, Converter={StaticResource ConverIdToContentKey}}"
+                Grid.ColumnSpan="5" Grid.Row="15" HorizontalAlignment="Center"
+                Width="200" Click="Button_Click"/>
     </Grid>
 </Window>
