--- a/PL/EngineerIdWindow.xaml
+++ b/PL/EngineerIdWindow.xaml
@@ -13,12 +13,9 @@
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
             <Button Content="OK" HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="0,100,0,0" Width="60" Grid.ColumnSpan="2"
-                  Click="OkButton_Click"  IsEnabled="{Binding Id, Converter={StaticResource ConverIdToContentKey}}"/>
+                  Click="OkButton_Click" />
         </Grid>
-        <TextBox MaxLength="9" Width="120" Margin="200,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center"
-                 
-                 IsEnabled="{Binding Id, Converter={StaticResource ConvertIdToBooleanKey}}"
-                 Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
+        <TextBox Text="{Binding myId, Mode=TwoWay}"  MaxLength="9" Width="120" Margin="200,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Label Grid.Column="0" Content="Enter your Id:" HorizontalAlignment="Left" Margin="100,0,0,0" VerticalAlignment="Center"/>
 
     </Grid>
