--- a/PL/EngineerMainWindow.xaml
+++ b/PL/EngineerMainWindow.xaml
@@ -7,39 +7,20 @@
         mc:Ignorable="d"
         Title="EngineerMainWindow" Height="450" Width="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="3*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <!--Internal, Upper Grid-->
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="2*"/>
-            </Grid.ColumnDefinitions>
-        </Grid>
-        <TextBox MaxLength="9" HorizontalAlignment="Left" Margin="280,26,0,0" VerticalAlignment="Top" Width="120"
-        IsEnabled="{Binding Id, Converter={StaticResource ConvertIdToBooleanKey}}"
-         Text="{Binding Id, Mode=TwoWay, NotifyOnValidationError=True, ValidatesOnExceptions=True}"/>
-        <Label Grid.Column="0" Content="Enter your Id:" HorizontalAlignment="Left" Margin="167,25,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.033,0.721"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
 
-        <!--Internal, Middle Grid-->
-        <Grid Grid.Row = "1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-        </Grid>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="207,130,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+        <Label Content="Alias:" IsVisibleChanged="{Binding hasTask}"
+                   FontSize="15" HorizontalAlignment="Left" Margin="100,30,0,0" VerticalAlignment="Top" Width="97" Height="39"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Width="290" Margin="10,37,0,372"
+                     IsVisibleChanged="{Binding hasTask}" Text="{Binding Path=myTask.Alias, Mode=TwoWay}"/>
 
+        <Button Grid.Column="1" Content="finish task" HorizontalAlignment="Left" Margin="448,30,0,0" VerticalAlignment="Top"
+             IsVisibleChanged="{Binding hasTask}" Click="FinishTaskButton_Click" Height="41" Width="75"/>
 
-        <!--Internal, Lower Grid-->
-        <Grid Grid.Row = "2">
-            <Button Content="Task List"  HorizontalAlignment="Left" Margin="49,5,0,5" Grid.RowSpan="1" Width="200"/>
-            <Button Content="Task Details"  HorizontalAlignment="Left" Margin="400,5,0,5" Grid.RowSpan="1" Width="200"/>
-
-        </Grid>
+        <Button Content="Task List"  IsVisibleChanged="{Binding dosentHaveTask}" Grid.Column="1" HorizontalAlignment="Left" Margin="430,106,0,255"  Width="112"/>
 
     </Grid>
 </Window>
