--- a/PL/EngineerMainWindow.xaml
+++ b/PL/EngineerMainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PL"
         mc:Ignorable="d"
-        Title="EngineerMainWindow" Height="450" Width="800">
+        Title="EngineerMainWindow" Height="450" Width="800"
+        DataContext="{Binding RelativeSource={RelativeSource Mode=PreviousData}}">
+    <!--TODO!!!! Mode=PreviousData?-->
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
